--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <main>
 
         <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
 
         </section>
 
